--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     },
     "repository" : {
         "type" : "git",
-        "url" : "https://git.framasoft.org/framasoft/ep_framasoft.git"
+        "url" : "https://framagit.org/framasoft/ep_framasoft.git"
     }
 }
 
